Add support for bdinfo
- bdinfo shows information about some system parameters. The
information is given by  DT and the values must be strings.
- The objects, login_tty and login_speed are read and processed from the
commandline

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -97,6 +97,15 @@ config FSL_OTP
 
 	  If unsure, it is safe to say Y.
 
+config BDINFO
+       bool "Support Board Information System (/sys/bdinfo)"
+       default y
+       help
+         The Board Information System reads board specific data and presents
+         it in a subdirectory of /sys.
+
+	 If unsure, say Y.
+
 config PRINTER
 	tristate "Parallel printer support"
 	depends on PARPORT
