Add bdinfo device on efusA9X
Add bdinfo device
- you can add more information but the values must be a string

--- a/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
+++ b/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
@@ -205,6 +205,13 @@
 //###			"Line Out Jack", "LINE_OUT",
 			"Headphone Jack", "HP_OUT";
 	};
+
+	/* -------------------- BOARD INFO -------------------- */
+	bdinfo {
+		compatible = "bdinfo";
+		board_name = "efusa9x";
+		ecc_strength = "8";
+	};
 };
 
 &iomuxc {
