Add bdinfo device on efusA7UL
Add bdinfo device
- you can add more information but the values must be a string

--- a/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
+++ b/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
@@ -169,6 +169,13 @@
 	        #address-cells = <1>;
 	        #size-cells = <0>;
 	};
+
+	/* -------------------- BOARD INFO -------------------- */
+	bdinfo {
+		compatible = "bdinfo";
+		board_name = "efusA7UL";
+		ecc_strength = "8";
+	};
 };
 
 &cpu0 {
