Add device tree and defconfig for efusA9 (fsimx6)
Add device trees for i.MX Quad, DualLite and Solo families.
Device tree settings:
- GPMI for NAND flash with F&S NAND driver and F&S APBH DMA driver
- LCD with 800x480 resolution (WVGA)
- LVDS with 800x480 resolution (WVGA)
- HDMI and HDMI audio
- v4l2_out for video overlays
- v4l2_cap_0 for parallel camera interface and
v4l2_cap_1 for serial camera interface
- Audio with SGTL5000 on SSI1, register access with I2C1
- Ethernet: 1GBit/s via RGMII
- Serial ports on UART1 (port A), UART2 (port B), UART4 (port A)
and UART5 (port D)
- Flexcan1 and Flexcan2
- USB Device and USB Host
- USDHC1 for SD card (port A)
- USDHC2 for SD card (port B)
- USDHC3 for eMMC, not working
- I2C1 (port C) with sgtl5000, HDMI-EDID, rtc8565, ov5640 MIPI,
ov9665, PCA9632 (LED driver) and MXT224 (pcap touch)
- I2C2 (port A) with PCA9632 (LED driver), MXT224 (pcap touch),
sx8654 (res. touch), FT5x06 (pcap touch)
- I2C3 (port B) for J22 connector
- ECSPI1 and ECSPI2 for user defined SPI (spidev)
- User PWM on PWM4
- PWM backlight on PWM3 for backlight connector
- Backlight via PCA9632 for RGB adapter

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -166,6 +166,7 @@ dtb-$(CONFIG_ARCH_MXC) += \
 	imx6dl-sabresd-pf200.dtb \
 	imx6dl-sabresd-hdcp.dtb \
 	imx6dl-wandboard.dtb \
+	fsimx6dl-efusa9.dtb \
 	imx6q-arm2.dtb \
 	imx6q-cubox-i.dtb \
 	imx6q-phytec-pbab01.dtb \
@@ -190,6 +191,7 @@ dtb-$(CONFIG_ARCH_MXC) += \
 	imx6q-sbc6x.dtb \
 	imx6q-udoo.dtb \
 	imx6q-wandboard.dtb \
+	fsimx6q-efusa9.dtb \
 	imx6sl-evk.dtb \
 	imx6sl-evk-btwifi.dtb \
 	imx6sl-evk-csi.dtb \
