Support ENET clock output on i.MX6-SoloX and i.MX6UL
- Allow configuring ethernet ref clock as output by setting property
  "fsl,ref-clock-out" in fec node of device tree; also enhance
  documentation in device tree binding for fsl-fec.txt
- Use fsl,ref-clock-out in device trees for efusA7UL and BemA9X
- Add appropriate GPR1 defines for ENET1 and ENET2 to switch clock mux
  and direction in include/linux/mfd/syscon/imx6q-iomuxc-gpr.h
- Add fixup code for DP83848 PHY to set LED mode to show link & activity
  in arch/arm/mach-imx/mach-imx6sx.c

--- a/arch/arm/boot/dts/fsimx6sx-bema9x.dts
+++ b/arch/arm/boot/dts/fsimx6sx-bema9x.dts
@@ -307,8 +307,11 @@ pwmleds {
 &fec1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_enet1_1>;
+	assigned-clocks = <&clks IMX6SX_CLK_ENET_REF>;
+	assigned-clock-rates = <50000000>;
 	phy-mode = "rmii";
 	fsl,magic-packet;
+	fsl,ref-clock-out;
 	status = "okay";
 };
 
