Improve bdinfo coding style, remove compiler warning
Move __setup() for login_tty command line argument to a place where it
does not create a compiler warning. Fix spacing for some if and for
commands.

Do not use bdinfo by default, this may break other platforms. But activate
bdinfo on F&S platforms.

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -98,13 +98,14 @@ config FSL_OTP
 	  If unsure, it is safe to say Y.
 
 config BDINFO
-       bool "Support Board Information System (/sys/bdinfo)"
-       default y
-       help
-         The Board Information System reads board specific data and presents
-         it in a subdirectory of /sys.
+	bool "Support F&S Board Information System (/sys/bdinfo)"
+	default n
+	help
+	  The Board Information System reads board specific data and presents
+	  it in a subdirectory of /sys.
 
-	 If unsure, say Y.
+	  If you are not using a board or module from F&S Elektronik Systeme,
+	  you can safely say N.
 
 config PRINTER
 	tristate "Parallel printer support"
