--- a/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
+++ b/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
@@ -229,7 +229,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hog>;
 
-	imx6x-efusa9x {
+	efusa9x {
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
 				/* VLCD_ON */
@@ -434,7 +434,7 @@
 				MX6SX_PAD_QSPI1B_SS0_B__UART3_TX	0x1b0b1
 				MX6SX_PAD_QSPI1B_SCLK__UART3_RX		0x1b0b1
 				MX6SX_PAD_QSPI1B_DATA1__UART3_CTS_B	0x1b0b1
-				MX6SX_PAD_QSPI1B_DATA0__UART3_CTS_B	0x1b0b1
+				MX6SX_PAD_QSPI1B_DATA0__UART3_RTS_B	0x1b0b1
 			>;
 		};
 
@@ -863,16 +863,16 @@
 		bits-per-pixel = <16>;
 		bus-width = <18>;
 		display-timings {
-			native-mode = <&timing0>;
-			timing0: wvga {
-				clock-frequency = <27000000>;
-				hactive = <640>;
+			native-mode = <&timing_lcd_wvga>;
+			timing_lcd_wvga: lcd_wvga {
+				clock-frequency = <33500000>;
+				hactive = <800>;
 				vactive = <480>;
-				hfront-porch = <16>;
-				hback-porch = <134>;
-				hsync-len = <10>;
-				vback-porch = <11>;
-				vfront-porch = <32>;
+				hfront-porch = <40>;
+				hback-porch = <88>;
+				hsync-len = <128>;
+				vback-porch = <33>;
+				vfront-porch = <10>;
 				vsync-len = <2>;
 				hsync-active = <0>;
 				vsync-active = <0>;
@@ -893,8 +893,8 @@
 		bits-per-pixel = <16>;
 		bus-width = <18>;
 		display-timings {
-			native-mode = <&timing1_copy>;
-			timing1_copy: wvga {
+			native-mode = <&timing_ldb_wvga_copy>;
+			timing_ldb_wvga_copy: ldb_wvga_copy {
 				clock-frequency = <33500000>;
 				hactive = <800>;
 				vactive = <480>;
@@ -923,8 +923,8 @@
 		status = "okay";
 
 		display-timings {
-			native-mode = <&timing1>;
-			timing1: wvga {
+			native-mode = <&timing_ldb_wvga>;
+			timing_ldb_wvga: ldb_wvga {
 				clock-frequency = <33500000>;
 				hactive = <800>;
 				vactive = <480>;
@@ -1150,8 +1150,8 @@
 	pinctrl-0 = <&pinctrl_gpmi_nand_1>;
 	fus,skipblocks = <2>;
 	fus,chunk1k;
-//###	fus,ecc_strength = <8>;		// Spare area 64 bytes
-	fus,ecc_strength = <52>;	// Spare area 224 bytes
+	fus,ecc_strength = <8>;		// Spare area 64 bytes
+//###	fus,ecc_strength = <52>;	// Spare area 224 bytes
 	status = "okay";
 };
 
