--- a/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
+++ b/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
@@ -619,7 +619,7 @@
 &iomuxc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hog_1>;
-	imx6ul-evk {
+	efusa7ul {
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
 /*###*/				MX6UL_PAD_JTAG_TMS__CCM_CLKO1		0x17088
