Activate all supported touchscreens on fsimx6sx/fsimx6ul
- Activate Atmel MXT, FT5x06 and SX8655 touches on fsimx6sx and fsimx6ul.
- Remove MXT touch on I2CB on efusA7UL, this is not correctly integrated
  with CONFIG switches yet.

--- a/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
+++ b/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
@@ -506,6 +506,7 @@
 
 	// ### TODO: FT5x06 on I2C_B
 
+#if 0
 	mxt224@4a {
 		compatible = "atmel,maxtouch";
 		reg = <0x4a>;
@@ -519,6 +520,7 @@
 		avdd = <&reg_atmel_mxt_avdd>;
 #endif
 	};
+#endif
 };
 
 /* I2C_C (Bitbanging): RTC (PCA8565), SGTL5000 (SKIT) */
