Add suspend/resume to gpmi-nand-fus.c
Improve F&S version of GPMI NAND driver. Most modifications are ported
from regular gpmi-nand.c/gpmi-lib.c version as of kernel 3.14.38 and
concern suspend and resume for power management.

- Add onfi_get_opt_cmd() to include/linux/mtd/nand.h to have a cleaner
  access to the opt_cmd ONFI parameter. We can drop ONFI_ASNYC_MODE_4/5
  because this is already defined as ONFI_TIMING_MODE_4/5 in nand.h.
- Remove function set_dma_type() and dma_type/last_dma_type entries from
  gpmi_nand_data, we do not need this type in our algorithm. This
  simplifies and speeds up dma_irq_callback().
- Move EDO timing functions below gpmi_nfc_compute_hardware_timing() like
  in the original gpmi-lib.c code. However keep the check whether the
  GET/SET_FEATURE commands are available on this NAND before trying to
  switch.
- Move some code from init_hardware() back to own function gpmi_init().
  This is required for suspend/resume.
- Add suspend/resume functions for power manager (suspend to RAM).
- On efusA7UL, fall back to fus,imx6q-gpmi-nand driver, not to
  fus,imx6sx-gpmi-nand because the i.MX6UL only has 40 bit BCH engine
  like the regular i.MX6, not the 62 bit BCH engine of the i.MX6-SoloX.

--- a/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
+++ b/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
@@ -608,7 +608,7 @@
 #ifdef CONFIG_EFUSA7UL_NAND
 &gpmi {
 	/* Switch to F&S implementation of GPMI NAND driver */
-	compatible = "fus,imx6ul-gpmi-nand", "fus,imx6sx-gpmi-nand";
+	compatible = "fus,imx6ul-gpmi-nand", "fus,imx6q-gpmi-nand";
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_gpmi_nand_1>;
 	fus,skipblocks = <2>;
