Let CONFIG_MXS_DMA_EXT select CONFIG_STMP_DEVICE
Like CONFIG_MXS_DMA, CONFIG_MXS_DMA_EXT depends on CONFIG_STMP_DEVICE.
Otherwise the build process will fail with unresolved references, if
all other users of CONFIG_STMP_DEVICE are disabled in .config.

--- a/drivers/dma/Kconfig
+++ b/drivers/dma/Kconfig
@@ -276,6 +276,7 @@ config MXS_DMA
 config MXS_DMA_EXT
 	bool "Extended MXS DMA support"
 	depends on SOC_IMX23 || SOC_IMX28 || SOC_IMX6
+	select STMP_DEVICE
 	select DMA_ENGINE
 	help
 	  Use the extended version of the MXS DMA engine to have better
