Add vmmc regulators to device trees of some F&S boards
Even if we do not have switched power supplies for MMC/SD, give some
fixed-voltage regulators. This makes it easier to extend the device tree
in case there will be a switched power supply in the future. In addition
it removes a warning in the boot messages.

efusA7UL:

- Add reg_wlan_vmmc_1v8 for WLAN
- Add reg_vref_3v3 as VMMC for SD cards and eMMC

efusA9X:

- Add reg_wlan_vmmc_1v8 for WLAN
- Use reg_vref_3v3 for SD cards and eMMC

BemA9X:

- Add reg_wlan_vmmc_1v8 for WLAN

In addition remove "keep-power-in-suspend" and "enable-sdio-wakeup"
from all MMC devices but WLAN chips.

--- a/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
+++ b/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
@@ -181,8 +181,18 @@
 			regulator-name = "vref-3v3";
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
+			regulator-always-on;
 		};
 
+#ifdef CONFIG_EFUSA9X_WLAN
+		reg_wlan_vmmc_1v8: regulator_wlan {
+			compatible = "regulator-fixed";
+			regulator-name = "vmmc-wlan-1v8";
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+			regulator-always-on;
+		};
+#endif
 
 		reg_usb_otg1_vbus: usb_otg1_vbus {
 			compatible = "regulator-fixed";
@@ -1005,12 +1015,14 @@
 	bus-width = <4>;
 #ifdef CONFIG_EFUSA9X_WLAN
 	non-removable;
+	keep-power-in-suspend;
+	enable-sdio-wakeup;
+	vmmc-supply = <&reg_wlan_vmmc_1v8>;
 #else
 	cd-gpios = <&gpio1 2 0>;
 	wp-gpios = <&gpio1 3 0>;
+	vmmc-supply = <&reg_vref_3v3>;
 #endif
-	keep-power-in-suspend;
-	enable-sdio-wakeup;
 	status = "okay";
 };
 
@@ -1021,8 +1033,7 @@
 	bus-width = <4>;
 	cd-gpios = <&gpio1 6 0>;
 	wp-gpios = <&gpio1 7 0>;
-	keep-power-in-suspend;
-	enable-sdio-wakeup;
+	vmmc-supply = <&reg_vref_3v3>;
 	status = "okay";
 };
 
@@ -1032,11 +1043,9 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc4_3>;
 	bus-width = <8>;
-	//###cd-gpios = <&gpio7 11 0>;
 	no-1-8-v;
 	non-removable;
-//###	keep-power-in-suspend;
-//###	enable-sdio-wakup;
+	vmmc-supply = <&reg_vref_3v3>;
 	status = "okay";
 };
 #endif
