--- a/arch/arm/boot/dts/fsimx6sx-bema9x.dts
+++ b/arch/arm/boot/dts/fsimx6sx-bema9x.dts
@@ -90,6 +90,14 @@ pwmleds {
 		};
 
 
+		reg_wlan_vmmc_1v8: regulator_wlan {
+			compatible = "regulator-fixed";
+			regulator-name = "vmmc-wlan-1v8";
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+			regulator-always-on;
+		};
+
 		reg_usb_otg1_vbus: usb_otg1_vbus {
 			compatible = "regulator-fixed";
 			regulator-name = "usb_otg1_vbus";
@@ -440,6 +448,7 @@ pwmleds {
 	non-removable;
 	keep-power-in-suspend;
 	enable-sdio-wakeup;
+	vmmc-supply = <&reg_wlan_vmmc_1v8>;
 	status = "okay";
 };
 #endif
