--- a/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
+++ b/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
@@ -658,6 +658,7 @@
 	sgtl5000: sgtl5000@0a {
 		compatible = "fsl,sgtl5000";
 		reg = <0x0a>;
+		mono2both;
 		clocks = <&clks IMX6SX_CLK_AUDIO>;
 		VDDA-supply = <&reg_sgtl5000_vdda>;
 		VDDIO-supply = <&reg_sgtl5000_vddio>;
