add bdinfo support for imx6
add boardinfo node to devicetrees and activate bdinfo driver
in defconfig.

--- a/arch/arm/boot/dts/fsimx6q-efusa9.dts
+++ b/arch/arm/boot/dts/fsimx6q-efusa9.dts
@@ -152,8 +152,14 @@
 / {
 	model = "F&S i.MX6 Quad efusA9 module";
 	compatible = "fus,imx6q-efusa9", "fsl,imx6q";
-};
 
+	/* -------------------- BOARD INFO -------------------- */
+	bdinfo {
+		compatible = "bdinfo";
+		board_name = "efusa9";
+		ecc_strength = "8";
+	};
+};
 
 &dma_apbh {
 	/* Switch to F&S implementation of APBH DMA driver for GPMI (NAND) */
