Improve fsimx6ul configuration
Device tree (efusA7UL):

- Activate reg_dvfs, currently it is only a fixed regulator that is
  always on, but this may change with newer board revisions.
- Allow more than 512 MB of RAM.
- Add CONFIGEFUSA7UL_SD_A_CDWP to tell whether the CD and WP pins are
  used with SD_A or SD_B port.

fsimx6ul_defconfig:

- In 3.14.52, it is now possible to remove all other i.MX CPU versions
  (IMX6Q, IMX6SL, IMX6SX, IMX7D) without causing conflicts.
- Remove CONFIG_DRM_VIVANTE, CONFIG_MXC_IPU and CONFIG_MXC_VPU, we
  have no GPU and no VPU on i.MX6UL.
- Remove CONFIG_VIDEO_MXC_OUTPUT and CONFIG_FB_MXC_SYNC_PANEL, they
  only pull in IPU stuff that is not required on i.MX6UL.
- Remove CONFIG_FB_MXC_EDID and CONFIG_FB_MXC_DCIC, there is no HDMI
  on i.MX6UL.
- Remove CONFIG_FB_MXC_LDB, there is no LVDS support on i.MX6UL
- Remove CONFIG_MXC_VADC, there is no analog camera on i.MX6UL
- Remove CONFIG_USB_EHCI_MXC, USB host is done by the chipidea USB
  driver.

Other changes:

- Add vadc to clock selector array cko1_sels[]
- In clock selector array cko2_sels[], change csi_core to csi, as this
  is the correct name of this clock.
- drivers/media/platform/mxc/output contains driver mxc_pxp_v4l2.c that
  does not depend on CONFIG_VIDEO_MXC_OUTPUT. So scan this directory in
  any case.
- CONFIG_FB_MXC_SYNC_PANEL pulls in a lot of stuff depending on IPU. But
  on i.MX6UL, there is no IPU. We can use drivers/video/mxsfb.c also
  without CONFIG_FB_MXC_SYNC_PANEL if we remove some function calls to
  mxc_dispdrv.c in this case.

--- a/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
+++ b/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
@@ -9,6 +9,7 @@
 #define CONFIG_EFUSA7UL_BL_LEVELS_16
 #define CONFIG_EFUSA7UL_WLAN
 #define CONFIG_EFUSA7UL_NAND
+//#define CONFIG_EFUSA7UL_SD_A_CDWP
 
 /* Please select only one of the following touch devices. Make sure that the
    corresponding touchscreen driver is activated in the kernel */
@@ -36,7 +37,7 @@
 #endif
 
 	memory {
-		reg = <0x80000000 0x20000000>;
+		reg = <0x80000000 0x80000000>;
 	};
 
 	backlight {
@@ -101,16 +102,13 @@
 		};
 #endif
 
-#if 0 //###
 		reg_dvfs: regulator_dvfs {
 			compatible = "regulator-fixed";
 			regulator-min-microvolt = <1325000>;
 			regulator-max-microvolt = <1325000>;
 			regulator-name = "dvfs";
-			regulator-type = "voltage";
 			regulator-always-on;
 		};
-#endif //###
 
 		reg_usb_otg2_vbus: usb_otg2_vbus {
 			compatible = "regulator-fixed";
@@ -188,7 +186,7 @@
 &cpu0 {
 	arm-supply = <&reg_arm>;
 	soc-supply = <&reg_soc>;
-//###	dc-supply = <&reg_dvfs>;
+	dc-supply = <&reg_dvfs>;
 };
 
 &clks {
@@ -382,8 +380,12 @@
 	enable-sdio-wakeup;
 	vmmc-supply = <&reg_wlan_vmmc_1v8>;
 #else
+#ifdef CONFIG_EFUSA7UL_SD_A_CDWP
 	cd-gpios = <&gpio1 19 1>;
 	wp-gpios = <&gpio1 18 0>;
+#else
+	non-removable;
+#endif
 	vmmc-supply = <&reg_vref_3v3>;
 #endif
 	status = "okay";
@@ -403,7 +405,12 @@
 #endif
 	/* ### TODO: set non-removable only if eMMC or board rev 1.00;
 	   actually U-Boot should overwrite this property at boot time */
+#ifdef CONFIG_EFUSA7UL_SD_A_CDWP
 	non-removable;
+#else
+	cd-gpios = <&gpio1 19 1>;
+	wp-gpios = <&gpio1 18 0>;
+#endif
 	vmmc-supply = <&reg_vref_3v3>;
 	status = "okay";
 };
