--- a/drivers/media/platform/Makefile
+++ b/drivers/media/platform/Makefile
@@ -53,6 +53,7 @@ obj-$(CONFIG_ARCH_OMAP)	+= omap/
 
 obj-$(CONFIG_VIDEO_MXC_CAPTURE)	+= mxc/capture/
 obj-$(CONFIG_VIDEO_MXC_CAPTURE)	+= mxc/subdev/
-obj-$(CONFIG_VIDEO_MXC_OUTPUT)	+= mxc/output/
+#obj-$(CONFIG_VIDEO_MXC_OUTPUT)	+= mxc/output/
+obj-y	+= mxc/output/
 
 ccflags-y += -I$(srctree)/drivers/media/i2c
