--- a/drivers/iio/temperature/Kconfig
+++ b/drivers/iio/temperature/Kconfig
@@ -13,4 +13,13 @@ config TMP006
 	  This driver can also be built as a module. If so, the module will
 	  be called tmp006.
 
+config BME280
+	tristate "Bosch BME280 tristate digital humidity, pressure and temperature"
+	depends on I2C
+	help
+	  If you say yes here you get support for the Bosch BME280 digital
+	  humidity, pressure and temperature.
+
+	  This driver can also be built as a module. If so, the module will
+	  be called BME280.
 endmenu
