--- a/drivers/media/rc/Kconfig
+++ b/drivers/media/rc/Kconfig
@@ -322,6 +322,15 @@ config IR_GPIO_CIR
 	   To compile this driver as a module, choose M here: the module will
 	   be called gpio-ir-recv.
 
+config LIRC_GPIOBLASTER
+	tristate "GPIO IR remote control Transmitter"
+	depends on RC_CORE
+	---help---
+	   Say Y if you want to use GPIO based IR Transmitter.
+
+	   To compile this driver as a module, choose M here: the module will
+	   be called lirc_gpioblaster.
+
 config RC_ST
 	tristate "ST remote control receiver"
 	depends on ARCH_STI && RC_CORE
