Fix support for fsimx6ul and fsimx6sx on kernel 4.1.15
Some things have to be tweaked for fsimx6ul and fsimx6sx to work with
kernel 4.1.15 again.

- drivers/dma/mxs-dma-ext.c: Some functions of the DMA driver
  (device_terminate_all, device_pause, device_resume) are now called
  directly from the DMA framework instead of dispatching them in the
  driver from the more generic function device_control. This requires
  some modifications in the function signatures and calls.
- drivers/rtc/hctosys.c: Missed a label err_invalid
- drivers/video/fbdev/mxsfb.c: Add a check for CONFIG_FB_MXC_SYNC_PANEL
  as it was done in the previous kernel in drivers/video/mxsfb.c. This
  allows to unset CONFIG_FB_MXC on i.MX6UL.
- sound/soc/fsl/imx-sgtl5000.c: Bring back the old version of the file.
  The new version only works with SSI, not SAI anymore.
- sound/soc/fsl/Kconfig: CONFIG_SND_SOC_IMX_SGTL5000 should not select
  CONFIG_SND_SOC_FSL_SSI, because we can also work with
  CONFIG_SND_SOC_FSL_SAI (again).
- drivers/leds/leds-pca963x.c: gpiochip_remove() does not return a
  value anymore.
- drivers/rtc/rtc-pcf8563.c: In function pcf8563_get_alarm_mode(),
  avoid warning "may be used uninitialized" by setting default values
  in any case.

Device tree modifications:

- efusA9X: Card detect pins are active low and need a pull-up resistor
  in the IOMUXC pad settings to work.
- efusA7UL: assigned-clock-parents needs to use <0>, not <&clks 0>,
  when no new parent should be assigned to a clock.

fsimx6ul_defconfig:

- Add CONFIG_SND_SOC_FSL_SSI, remove CONFIG_SND_SOC_FSL_ESAI.
- Add CONFIG_SND_SOC_IMX_MQS.

fsimx6sx_defconfig:

- Add CONFIG_SND_SOC_FSL_SSI, remove CONFIG_SND_SOC_FSL_ESAI.
- Add CONFIG_SND_SOC_IMX_MQS.
- Fix default settings for parallel RGB display backlight (LCD).

--- a/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
+++ b/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
@@ -196,9 +196,9 @@
 			  <&clks IMX6UL_CLK_CKO2_SEL>,
 			  <&clks IMX6UL_CLK_CKO>;
 
-	assigned-clock-parents = <&clks 0>,
+	assigned-clock-parents = <0>,
 				 <&clks IMX6UL_CLK_PLL4_AUDIO_DIV>,
-				 <&clks 0>,
+				 <0>,
 				 <&clks IMX6UL_CLK_SAI2>,
 				 <&clks IMX6UL_CLK_CKO2>;
 //###	assigned-clock-rates = <786432000>, <0>, <24576000>;
@@ -381,7 +381,7 @@
 	vmmc-supply = <&reg_wlan_vmmc_1v8>;
 #else
 #ifdef CONFIG_EFUSA7UL_SD_A_CDWP
-	cd-gpios = <&gpio1 19 1>;
+	cd-gpios = <&gpio1 19 GPIO_ACTIVE_LOW>;
 	wp-gpios = <&gpio1 18 0>;
 #else
 	non-removable;
@@ -408,7 +408,7 @@
 #ifdef CONFIG_EFUSA7UL_SD_A_CDWP
 	non-removable;
 #else
-	cd-gpios = <&gpio1 19 1>;
+	cd-gpios = <&gpio1 19 GPIO_ACTIVE_LOW>;
 	wp-gpios = <&gpio1 18 0>;
 #endif
 	vmmc-supply = <&reg_vref_3v3>;
