--- a/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
+++ b/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
@@ -491,8 +491,8 @@
 				MX6SX_PAD_SD1_DATA1__USDHC1_DATA1	0x17071
 				MX6SX_PAD_SD1_DATA2__USDHC1_DATA2	0x17071
 				MX6SX_PAD_SD1_DATA3__USDHC1_DATA3	0x17071
-				MX6SX_PAD_GPIO1_IO02__GPIO1_IO_2	0x80000000 /* CD */
-				MX6SX_PAD_GPIO1_IO03__GPIO1_IO_3	0x80000000 /* WP */
+				MX6SX_PAD_GPIO1_IO02__GPIO1_IO_2	0x17000 /* CD */
+				MX6SX_PAD_GPIO1_IO03__GPIO1_IO_3	0x17000 /* WP */
 			>;
 		};
 
@@ -505,8 +505,8 @@
 				MX6SX_PAD_SD2_DATA1__USDHC2_DATA1	0x17071
 				MX6SX_PAD_SD2_DATA2__USDHC2_DATA2	0x17071
 				MX6SX_PAD_SD2_DATA3__USDHC2_DATA3	0x17071
-				MX6SX_PAD_GPIO1_IO06__GPIO1_IO_6	0x80000000 /* CD */
-				MX6SX_PAD_GPIO1_IO07__GPIO1_IO_7	0x80000000 /* WP */
+				MX6SX_PAD_GPIO1_IO06__GPIO1_IO_6	0x17000 /* CD */
+				MX6SX_PAD_GPIO1_IO07__GPIO1_IO_7	0x17000 /* WP */
 			>;
 		};
 
@@ -737,6 +737,8 @@
 			reg = <0>;
 			label = "0-PWRCTL";
 			type = "GPIO";
+			default-on;
+			active-high;
 		};
 		led@1 {
 			reg = <1>;
@@ -1020,8 +1022,8 @@
 	enable-sdio-wakeup;
 	vmmc-supply = <&reg_wlan_vmmc_1v8>;
 #else
-	cd-gpios = <&gpio1 2 0>;
-	wp-gpios = <&gpio1 3 0>;
+	cd-gpios = <&gpio1 2 GPIO_ACTIVE_LOW>;
+	wp-gpios = <&gpio1 3 GPIO_ACTIVE_HIGH>;
 	vmmc-supply = <&reg_vref_3v3>;
 #endif
 	status = "okay";
@@ -1032,8 +1034,8 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc2_1>;
 	bus-width = <4>;
-	cd-gpios = <&gpio1 6 0>;
-	wp-gpios = <&gpio1 7 0>;
+	cd-gpios = <&gpio1 6 GPIO_ACTIVE_LOW>;
+	wp-gpios = <&gpio1 7 GPIO_ACTIVE_HIGH>;
 	vmmc-supply = <&reg_vref_3v3>;
 	status = "okay";
 };
